# rust-workflow-creator-ai

./: Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
db/: init.sql
src/: db.rs  main.rs
